Allow parsing any unknown keywords as nginx directives. Allow multiples.
- Replace specific handling of rewrite with unknown keyword -> directive mappings.
- Refactor verbose upstream Header config name.
- Allow multiple keywords to be specified by appending `.<num>` to the label. Labels with ids are applied in the order they are defined, not the number index. (TODO?) Currently only used by the unknown keyword -> nginx directive fallback.